# selium

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  proxy.debug.der  proxy.prod.der  rustfmt.toml
benchmarks/: Cargo.toml
benchmarks/src/: args.rs  lib.rs  main.rs  results.rs  runner.rs
client/: CHANGELOG.md  Cargo.toml  README.md  ca.debug.der  ca.prod.der  proxy.debug.der
client/examples/: batching_and_compression.rs  compression.rs  decompression.rs  heavy_load.rs  publish.rs  publish_acked.rs  publish_bincode.rs  publish_chrono.rs  publish_multitasking.rs  reply.rs  request-reply.rs  request.rs  rpc.rs  subscribe.rs  subscribe_bincode.rs
client/src/: aliases.rs  bistream.rs  client.rs  connection.rs  constants.rs  lib.rs  operation.rs  prelude.rs
client/src/batching/: batch_config.rs  message_batch.rs  mod.rs
client/src/chunking/: chunk_config.rs  chunk_store.rs  mod.rs
client/src/client/: builder.rs  mod.rs
client/src/client/cloud/: mod.rs  states.rs
client/src/client/custom/: mod.rs  states.rs
client/src/clients/: builder.rs  mod.rs  publisher.rs  subscriber.rs
client/src/codecs/: bincode_codec.rs  mod.rs  string_codec.rs
client/src/crypto/: cert.rs  mod.rs  verifiers.rs
client/src/keep_alive/: backoff_strategy.rs  connection_status.rs  helpers.rs  mod.rs  pubsub.rs  reqrep.rs
client/src/logging/: connection.rs  keep_alive.rs  mod.rs
client/src/protocol/: codec.rs  frame.rs
client/src/retry/: mod.rs  retry_sink.rs  retry_strategy.rs
client/src/streams/: aliases.rs  builder.rs  mod.rs  publisher.rs  subscriber.rs
client/src/streams/pubsub/: mod.rs  publisher.rs  states.rs  subscriber.rs
client/src/streams/request_reply/: mod.rs  (+3 more)
client/src/traits/: client.rs  client_auth.rs  client_config.rs  codec.rs  connect.rs  into_timestamp.rs  keep_alive.rs  mod.rs  operations.rs  stream.rs  try_into_u64.rs
client/src/utils/: cert.rs  client.rs  mod.rs  net.rs  units.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/protocol/: codec.rs  frame.rs  mod.rs  utils.rs
common/src/traits/: codec.rs
common/src/types/: bistream.rs  mod.rs  operation.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/modules/remote-client/: Cargo.toml
examples/data-pipeline/: Cargo.toml  README.md
examples/data-pipeline/src/: lib.rs
examples/echo-no-deps/: Cargo.toml  README.md  build.rs
examples/echo-no-deps/src/: lib.rs
examples/http-rpc/: Cargo.toml
examples/load-balancer/: Cargo.toml  README.md
examples/load-balancer/src/: lib.rs
examples/log-analyser/: Cargo.toml  README.md  build.rs
examples/log-analyser/schemas/: log.fbs
examples/log-analyser/src/: lib.rs  window.rs
examples/orchestrator/: Cargo.toml  README.md  build.rs
examples/orchestrator/schemas/: orchestrator.fbs
examples/orchestrator/src/: lib.rs
examples/rest-api/: Cargo.toml  README.md
examples/rest-api/src/: lib.rs
examples/waf/: Cargo.toml  README.md  build.rs
examples/waf/schemas/: edge_waf.fbs
examples/waf/src/: lib.rs
log/: CHANGELOG.md  Cargo.toml
log/benches/: read_benchmark.rs  write_benchmark.rs
log/examples/: basic_usage.rs
log/src/: config.rs  data.rs  error.rs  lib.rs  log_cleaner.rs  message_log.rs  traits.rs
log/src/config/: flush_policy.rs  mod.rs
log/src/data/: iterator.rs  message.rs  mod.rs
log/src/index/: entry.rs  mmap.rs  mod.rs
log/src/message/: codec.rs  headers.rs  mod.rs  slice.rs
log/src/segment/: list.rs  mod.rs
log/src/tasks/: cleaner.rs  flusher.rs  mod.rs
log/tests/: helpers.rs  main.rs
protocol/: CHANGELOG.md  Cargo.toml
protocol/src/: bistream.rs  codec.rs  error_codes.rs  frame.rs  lib.rs  offset.rs  operation.rs  request_id.rs  topic_name.rs  traits.rs  utils.rs
server/: CHANGELOG.md  Cargo.toml  README.md  proxy.debug.der  proxy.prod.der  selium-server.service
server/src/: args.rs  cloud.rs  graph.rs  lib.rs  main.rs  ordered_sink.rs  pipeline.rs  quic.rs  server.rs  topic.rs
server/src/pipeline/: channels.rs  exclusive.rs  lockable.rs  mod.rs  publisher.rs  subscriber.rs  topic.rs
server/src/sink/: fanout_channel.rs  fanout_many.rs  filter.rs  mod.rs  router.rs
server/src/stream/: merge_channel.rs  mod.rs
server/src/topic/: config.rs  mod.rs  pubsub.rs  reqrep.rs
server/src/util/: cert.rs  mod.rs
standard/: CHANGELOG.md  Cargo.toml
standard/benches/: codecs.rs  compression.rs
standard/src/: errors.rs  lib.rs
standard/src/codecs/: bincode_codec.rs  bytes_codec.rs  mod.rs  string_codec.rs
standard/src/compression/: mod.rs
standard/src/traits/: codec.rs  compression.rs  mod.rs
subsystem/filesystem-store/: Cargo.toml
subsystem/messaging/: Cargo.toml
subsystem/messaging/src/: driver.rs  lib.rs  reader.rs  writer.rs
subsystem/messaging/tests/: readwrite.rs
subsystem/net-hyper/: Cargo.toml
subsystem/net-hyper/src/: client.rs  driver.rs  lib.rs  server.rs  tls.rs  wire.rs
subsystem/net-quinn/: Cargo.toml
subsystem/net-quinn/src/: driver.rs  lib.rs
subsystem/wasmtime/: Cargo.toml
subsystem/wasmtime/src/: driver.rs  lib.rs
system/kernel/: Cargo.toml
system/kernel/src/: guest_async.rs  guest_data.rs  mailbox.rs  operation.rs  registry.rs
system/runtime/: Cargo.toml
system/runtime/src/: certs.rs  kernel.rs  main.rs  modules.rs  tls.rs
system/userland/: Cargo.toml  build.rs
system/userland/macros/: Cargo.toml  build.rs
system/userland/schemas/: logging.fbs  net.fbs
system/userland/src/: abi.rs  async.rs  context.rs  driver.rs  encoding.rs  io.rs  lib.rs  logging.rs  net.rs  process.rs  singleton.rs  time.rs
tests/: Cargo.toml
tests/certs/: ca.crt  ca.key  server.crt  server.key
tests/request-reply/: Cargo.toml  build.rs
tests/request-reply/schemas/: request_reply.fbs
tests/request-reply/src/: lib.rs
tests/request-reply/tests/: request_reply.rs
tests/tests/: pub_sub.rs
tests/tests/streams/: helpers.rs  main.rs  pub_sub.rs  request_reply.rs
tools/: CHANGELOG.md  Cargo.toml
tools/src/: cli.rs  lib.rs  main.rs  traits.rs
tools/src/commands/: mod.rs
(+211 files in other folders)
