[workspace]
members = ["client", "server", "protocol", "tests", "benchmarks", "standard"]

[workspace.package]
edition = "2021"
authors = ["Selium Contributors"]
license = "MPL-2.0"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium"
readme = "README.md"
keywords = ["selium", "messaging", "streaming", "stream", "queue"]
categories = ["network-programming", "webassembly"]
