[workspace]
resolver = "2"
members = [
  "subsystem/filesystem-store",
  "subsystem/messaging",
  "subsystem/net-quinn",
  "subsystem/wasmtime",
  "system/abi",
  "system/kernel",
  "system/runtime",
  "system/userland",
  "system/userland/macros",
  # "tests/request-reply"
]
exclude = ["examples"]

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2024"
description = "Streaming compute fabric"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium"
license = "MPL-2.0"
keywords = ["data", "etl", "streaming", "wasm", "webassembly"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
blake3 = { version = "1.8", default-features = false }
cargo = { version = "0.93", default-features = false }
clap = { version = "4.5", default-features = false }
flatbuffers = { version = "25.12", default-features = false }
flatbuffers-build = { version = "0.2", default-features = false }
flatc = { git = "https://github.com/petehayes102/flatc.rs", branch = "v25.12.19" }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
libc = { version = "0.2", default-features = false }
loom = { version = "0.7", default-features = false }
parking_lot = { version = "0.12", default-features = false }
path-security = { version = "0.2", default-features = false }
pin-project = { version = "1.1", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quinn = { version = "0.11", default-features = false }
quote = { version = "1.0", default-features = false }
rcgen = { version = "0.14", default-features = false }
rkyv = { version = "0.8", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pki-types = { version = "1.13", default-features = false }
sharded-slab = { version = "0.1", default-features = false }
stable-vec = { version = "0.4", default-features = false }
syn = { version = "2.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.48", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
trybuild = { version = "1.0", default-features = false }
uuid = { version = "1.19", default-features = false }
wasmtime = { version = "40.0", default-features = false }
webpki-roots = { version = "1.0", default-features = false }
