[package]
name = "selium-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
selium = { path = "../client", features = ["std"] }
selium-server = { path = "../server" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["macros"] }
futures = "0.3"
anyhow = "1.0"
num-format = "0.4"
