[package]
name = "selium-benchmarks"
version = "0.2.0"
edition = "2021"

[dependencies]
selium = { path = "../client", features = ["std"] }
selium-server = { path = "../server" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["macros"] }
futures = "0.3"
anyhow = "1.0"
num-format = "0.4"
