[package]
name = "selium"
version = "0.1.0"
description = """
selium is the client library for Selium, an extremely developer friendly, composable messaging
platform with zero build time configuration.
"""
include = ["src/**/*"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = { version = "1.3", optional = true }
bytes = "1.4"
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "clock",
] }
futures = "0.3"
quinn = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"
selium-common = { version = "0.1", path = "../common" }
selium-std = { version = "0.1", optional = true, path = "../standard" }
selium-traits = { version = "0.1", path = "../traits" }
serde = { version = "1.0", optional = true, features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }

[features]
chrono = ["dep:chrono"]
bincode = ["dep:bincode", "dep:serde"]
std = ["dep:selium-std"]

[[example]]
name = "publish"
path = "examples/publish.rs"

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"

[[example]]
name = "publish_multitasking"
path = "examples/publish_multitasking.rs"

[[example]]
name = "publish_bincode"
path = "examples/publish_bincode.rs"
required-features = ["bincode"]

[[example]]
name = "subscribe_bincode"
path = "examples/subscribe_bincode.rs"
required-features = ["bincode"]

[[example]]
name = "publish_chrono"
path = "examples/publish_chrono.rs"
required-features = ["chrono"]

[[example]]
name = "compression"
path = "examples/compression.rs"
required-features = ["std"]

[[example]]
name = "decompression"
path = "examples/decompression.rs"
required-features = ["std"]
