[package]
name = "selium"
version = "0.1.0"
description = """
selium is the client library for Selium, an extremely developer friendly, composable messaging
platform with zero build time configuration.
"""
include = ["src/**/*"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.5"
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "clock",
] }
futures = "0.3"
quinn = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"
selium-protocol = { version = "0.1", path = "../protocol" }
selium-std = { version = "0.1", optional = true, path = "../standard" }
tokio = { version = "1.33", features = ["full"] }

[dev-dependencies]
serde = "1.0"

[features]
chrono = ["dep:chrono"]
std-compression = ["selium-std/compression"]
std-traits = ["selium-std/traits"]
std-codec = ["selium-std/codec"]
std = ["std-compression", "std-codec"]
default = ["std-traits"]

[[example]]
name = "publish"
path = "examples/publish.rs"
required-features = ["std-codec"]

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"
required-features = ["std-codec"]

[[example]]
name = "publish_multitasking"
path = "examples/publish_multitasking.rs"
required-features = ["std-codec"]

[[example]]
name = "publish_bincode"
path = "examples/publish_bincode.rs"
required-features = ["std-codec"]

[[example]]
name = "subscribe_bincode"
path = "examples/subscribe_bincode.rs"
required-features = ["std-codec"]

[[example]]
name = "publish_chrono"
path = "examples/publish_chrono.rs"
required-features = ["std-codec", "chrono"]

[[example]]
name = "compression"
path = "examples/compression.rs"
required-features = ["std-codec", "std-compression"]

[[example]]
name = "decompression"
path = "examples/decompression.rs"
required-features = ["std-codec", "std-compression"]

[[example]]
name = "batching_and_compression"
path = "examples/batching_and_compression.rs"
required-features = ["std-compression"]
