[package]
name = "selium-log"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
chrono = "0.4"
crc32c = "0.6"
futures = "0.3"
memmap2 = "0.9"
tokio = { version = "1.36", features = [
    "fs",
    "io-util",
    "time",
    "macros",
    "rt-multi-thread",
    "rt",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
