[package]
name = "selium-protocol"
version = "0.1.0"
description = """
selium-protocol is a dependent crate of Selium. Do not use directly.
"""
include = ["src/**/*"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = { version = "1.5", features = ["serde"] }
futures = "0.3"
quinn = "0.10"
serde = { version = "1.0", features = ["derive"] }
selium-std = { version = "0.1", path = "../standard" }
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.10.2"
