[package]
name = "selium-protocol"
version = "0.2.1"
description = """
selium-protocol is a dependent crate of Selium. Do not use directly.
"""
include = ["src/**/*"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[features]
__notopiccheck = []

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = { version = "1.6", features = ["serde"] }
futures = "0.3"
quinn = "0.10"
serde = { version = "1.0", features = ["derive"] }
selium-std = { version = "0.2", path = "../standard" }
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.10"
lazy-regex = "3.1"
