[package]
name = "selium-server"
version = "0.3.1"
description = """
The server-side binary for Selium, an extremely developer friendly, composable
messaging platform with zero build time configuration.
"""
include = ["src/**/*", "proxy.debug.der", "proxy.prod.der"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
__cloud = []

[dependencies]
anyhow = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.2"
env_logger = "0.11"
futures = "0.3"
hmac-sha512 = "1.1"
log = "0.4"
pin-project-lite = "0.2"
quinn = "0.10"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "1.0"
selium-protocol = { version = "0.2", path = "../protocol" }
selium-std = { version = "0.2", path = "../standard", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
