[package]
name = "selium-std"
version = "0.1.0"
description = """
selium-std is a dependent crate of Selium. Do not use directly.
"""
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = { version = "1.3", optional = true }
brotli = { version = "3.4", optional = true }
bytes = "1.4"
flate2 = { version = "1.0", features = ["zlib"], optional = true }
lz4_flex = { version = "0.11", optional = true }
serde = { version = "1.0", optional = true }
zstd = { version = "0.12", optional = true }

[dev-dependencies]
criterion = "0.5"
fake = "2.8"
serde = { version = "1.0", features = ["derive"] }

[features]
compression = ["dep:brotli", "dep:flate2", "dep:lz4_flex", "dep:zstd"]
codec = ["dep:bincode", "dep:serde"]
traits = []

[[bench]]
name = "codecs"
harness = false
required-features = ["codec", "traits"]

[[bench]]
name = "compression"
harness = false
required-features = ["compression", "traits"]
