[package]
name = "selium-std"
version = "0.2.1"
description = """
selium-std is a dependent crate of Selium. Do not use directly.
"""
include = ["src/**/*", "benches/**/*"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0"
bincode = "1.3"
brotli = { version = "3.4", optional = true }
bytes = "1.6"
flate2 = { version = "1.0", features = ["zlib"], optional = true }
futures = "0.3"
lz4_flex = { version = "0.11", optional = true }
quinn = "0.10"
selium-log = { version = "0.1", path = "../log" }
serde = { version = "1.0", optional = true }
thiserror = "1.0"
zstd = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
fake = "2.9"
serde = { version = "1.0", features = ["derive"] }

[features]
compression = ["dep:brotli", "dep:flate2", "dep:lz4_flex", "dep:zstd"]
codec = ["dep:serde"]

[[bench]]
name = "codecs"
harness = false
required-features = ["codec", "traits"]

[[bench]]
name = "compression"
harness = false
required-features = ["compression", "traits"]
