[package]
name = "selium-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
futures = "0.3"
selium = { path = "../client", features = ["std"] }
selium-server = { path = "../server" }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35", features = ["macros"] }
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies]
clap = "4.4.11"
