[package]
name = "selium-tests"
version = "0.3.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
futures = "0.3"
selium = { path = "../client", features = ["std"] }
selium-server = { path = "../server" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10.1"
tokio = { version = "1.38", features = ["macros"] }
uuid = { version = "1.6", features = ["v4"] }

[dependencies]
clap = "4.5"
