[package]
name = "selium-dev-tools"
version = "0.1.0"
about = "A CLI application containing tools for Selium developers"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
rcgen = "0.11.3"
rustls = "0.21.7"
time = "0.3.30"
