[package]
name = "selium-tools"
version = "0.1.0"
description = "A CLI application containing tools for Selium developers"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
rcgen = "0.11"
rustls = "0.22"
time = "0.3"
