[package]
name = "selium-tools"
version = "0.2.0"
description = "A CLI application containing tools for Selium developers"
include = ["src/**/*"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
rcgen = "0.12"
rustls = "0.23"
time = "0.3"
