[package]
name = "selium-client"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures = { workspace = true, features = ["alloc", "std"] }
quinn = { workspace = true, features = ["runtime-tokio", "rustls-ring"] }
rkyv = { workspace = true }
rustls = { workspace = true, features = ["ring", "std"] }
rustls-pki-types = { workspace = true, features = ["alloc"] }
selium-abi = { path = "../system/abi" }
thiserror = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync"
] }
tracing = { workspace = true }
