[package]
name = "selium-example-echo-no-deps"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
flatbuffers = { version = "25.12", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
selium-userland = "1.0.0-alpha.1"
tracing = { version = "0.1", default-features = false }

[build-dependencies]
flatbuffers-build = "0.2.4"
flatc-fork = "0.5.0"
