[package]
name = "selium-example-echo-no-deps"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true, features = ["std"] }
selium-userland = "1.0.0-alpha.2"
tracing = { workspace = true }

[build-dependencies]
flatbuffers-build = { workspace = true }
flatc-fork = { workspace = true }
