[package]
name = "selium-example-switchboard-echo"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
flatbuffers = { version = "25.12", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
selium-switchboard = { path = "../../crates/modules/switchboard/user" }
selium-userland = { path = "../../crates/system/userland" }
tracing = { version = "0.1", default-features = false }

[build-dependencies]
flatbuffers-build = "0.2.4"
flatc = { git = "https://github.com/petehayes102/flatc.rs", branch = "v25.12.19" }
