[package]
name = "selium-example-load-balancer"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true, features = ["std"] }
selium-atlas = { workspace = true }
selium-switchboard = { workspace = true }
selium-userland = { workspace = true }
tracing = { workspace = true }
