[package]
name = "selium-example-log-analyser"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true, features = ["std"] }
# selium-atlas = { workspace = true }
selium-atlas = { path = "../../../../selium-modules/main/atlas/client" }
# selium-switchboard = { workspace = true }
selium-switchboard = { path = "../../../../selium-modules/main/switchboard/client" }
selium-userland = { path = "../../system/userland" }
tracing = { workspace = true }

[build-dependencies]
flatbuffers-build = { workspace = true }
flatc-fork = { workspace = true }
