[package]
name = "selium-filesystem-store"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
path-security = { workspace = true }
selium-kernel = { path = "../../system/kernel" }
