[package]
name = "selium-net-hyper"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures-util = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = [
  "client",
  "http1",
  "http2",
  "server",
] }
hyper-util = { workspace = true, features = ["tokio"] }
rustls = { workspace = true, features = ["ring", "std"] }
rustls-pki-types = { workspace = true, features = ["std"] }
selium-abi = { path = "../../system/abi" }
selium-kernel = { path = "../../system/kernel" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync"] }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
webpki-roots = { workspace = true }
