[package]
name = "selium-net-quinn"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures-util = { workspace = true }
parking_lot = { workspace = true }
quinn = { workspace = true, features = ["runtime-tokio", "rustls-ring"] }
rustls-pki-types = { workspace = true, features = ["std"] }
selium-abi = { workspace = true }
selium-kernel = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
webpki-roots = { workspace = true }
