[package]
name = "selium-wasmtime"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
selium-abi = { workspace = true }
selium-kernel = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true, features = [
  "async",
  "cranelift",
  "runtime",
  "std"
] }
