[package]
name = "selium-runtime"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "help", "std"] }
flatbuffers = { workspace = true }
rcgen = { workspace = true, features = ["crypto", "pem", "ring"] }
rustls = { workspace = true, features = ["ring", "std"] }
rustls-pki-types = { workspace = true, features = ["std"] }
selium-abi = { path = "../abi" }
selium-filesystem-store = { path = "../../subsystem/filesystem-store" }
selium-kernel = { path = "../kernel" }
selium-messaging = { path = "../../subsystem/messaging" }
selium-net-hyper = { path = "../../subsystem/net-hyper" }
selium-net-quinn = { path = "../../subsystem/net-quinn" }
selium-userland = { path = "../userland" }
selium-wasmtime = { path = "../../subsystem/wasmtime" }
tokio = { workspace = true, features = [
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
  "std",
] }
wasmtime = { workspace = true, features = ["async", "cranelift", "runtime", "std"] }
